--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "name": "grocery-shopping-app",
+    "scheme": "groceryshoppingapp",
     "slug": "grocery-shopping-app",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -22,6 +23,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
