--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-uuid": "^2.0.2"
+    "react-native-paper": "^5.12.5",
+    "react-native-uuid": "^2.0.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
